rails_curriculum/11_positioning_media_queries/assets/positioning_media_queries.css
body {
  font-family: Arial, sans-serif;
  background-color: #FEFFF1;
}

h1 {
  font-size: 38px;
  margin-bottom: 10px;
}

h2 {
  font-size: 32px;
}

ul li a, figcaption a {
  text-decoration: none;
  color: inherit;
}

header > img {
  width: 100px;
  float: left;
}

.ingredients-list {
  list-style: square inside;
}

ol {
  list-style: upper-roman inside;
}

.user_review h4 {
  font-size: 18px;
  font-weight: bold;
}

input[type="radio"] {
    -webkit-appearance: none;
    width: 27px;
    height: 27px;
    background-image: url(../assets/stars.png);
    vertical-align: bottom;
}

input[type="radio"]:checked {
  background-position: 30px 30px;
}


input[type="submit"]:last-child {
    background: gold;
}

input:last-child:hover {
    -webkit-filter: brightness(90%);
}

ol li:nth-of-type(2n) {
  background-color: whitesmoke;
  margin: 10px 0;
}

h2 + .user_review {
    border-top: 1px solid black;
}

nav {
    float: right;
}

nav ul li {
    display: inline-block;
}

nav ul li a {
    padding: 20px;
    display: block;
}

body {
  margin: 0 auto;
    width: 60%;
}

aside {
    display: inline-block;
}

.ingredients-list li {
    margin: 15px 0px;
}

input[type="text"], select {
    display: block;
    width: 175px;
}

select {
    margin: 10px 0;
    width: 180px;
}

textarea {
    width: 350px;
}

label {
    display: block;
}

/* Media Queries! */
@media all and (max-width: 900px) {
/* Code Goes Here */
}

